fixed position issue to fixed and applied z-index to navbar.

--- a/index.css
+++ b/index.css
@@ -13,6 +13,14 @@
     justify-items: center;
     color: black;
 }
+.head-nav {
+    position: fixed;
+    min-width: 100%;
+    z-index: 1000;
+}
+.intro-section {
+    margin: 100px;
+}
 
 #navbarNav {
     justify-content: right;
@@ -29,6 +37,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
+    margin-top: 70px;
 }
 .paragraph-intro-div {
     width: 50%;
@@ -146,5 +155,7 @@
     border-radius: 40px;
     margin-top: 40px;
     background: #800080;
-
+    color: white;
+    /* padding-left: 3px;
+    padding-right: 3px; */
 }
